sqpack 1.0.3
------------

----- cvs ci ------
Fri Nov 18  14:19:00
Fedor:
+ purge Jam areas (from Vlad Pluzhnikov).

----- cvs ci ------
Thu Oct 16 13:40:00 MET DST 1999
sms:
- reorganized Makefiles, please read README.Makefiles in the husky-common
  package!

----- cvs ci ------
Tue Oct 12 19:21:43 NOVST 1999
max:
+ start changeLog file
* patch from Kolya Nesterov:
  - sqpack correctly updates reply links after packing
  - coredump in sqpack fixed (when there was a problem with opening lastread
files)